--- a/src/components/SpaceCards/index.css
+++ b/src/components/SpaceCards/index.css
@@ -108,19 +108,57 @@
 .post-views span {
   color: #bbb;
 }
-
-@media (max-width: 768px) {
-  /* Media Queries for Mobile devices*/
+@media (max-width: 1200px) {
   .post-card-container {
-    width: 100%;
+    margin-left: 0px;
+    width: calc(100% - 550px);
+  }
+  .post-card {
+    margin-left: 0px;
+    flex-shrink: inherit;
+  }
+}
+@media (max-width: 1024px) {
+  .post-card-container {
+    width: 500%;
     margin-right: 0px;
     display: flex;
     flex-direction: row;
     justify-content: start;
   }
   .post-card {
-    width: 400px;
-    margin-left: 0px;
+    padding: 15px;
+    margin-bottom: 6px;
+    width: 30%; /* Adjust to fit better on smaller screens */
+  }
+
+  .post-title {
+    font-size: 14px;
+  }
+
+  .post-description {
+    font-size: 12px;
+  }
+
+  .post-meta span,
+  .post-views span {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  /* Media Queries for Mobile devices*/
+  .post-card-container {
+    width: 500%;
+    margin-right: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+  }
+  .post-card {
+    padding: 15px;
+    margin-bottom: 6px;
+    width: 30%; /* Adjust to fit better on smaller screens */
   }
 
   .post-title {
@@ -140,17 +178,18 @@
 @media (max-width: 480px) {
   /* Media Queries for Mobile devices with small displays*/
   .post-card {
-    max-width: 100%;
+    max-width: 150%;
     margin-left: 0;
     padding: 15px;
+    flex-wrap: wrap;
   }
 
   .post-title {
-    font-size: 14px;
+    font-size: 10px;
   }
 
   .post-description {
-    font-size: 12px;
+    font-size: 8px;
   }
 
   .post-meta,
